<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map"
        android:title="@string/title_map"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/message"
        android:title="@string/title_message"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_share"
        android:icon="@drawable/share"
        android:title="@string/title_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/mine"
        android:title="@string/title_mine"
        app:showAsAction="always" />

</menu>