<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnrollActivity"
    android:orientation="vertical">

    <!-- 图像-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/main"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="行疆"
            android:layout_gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Login to Frontier to continue"
            android:textSize="16sp"/>
    </LinearLayout>

    <!--输入用户名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shadow"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/Txt_username"
            android:textSize="20sp"></TextView>

        <EditText
            android:id="@+id/edtTxt_enter_name"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:autofillHints="username"
            android:hint="@string/edtTxt_enter_name"
            android:inputType="text" />
    </LinearLayout>

    <!-- 输入邮箱-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shadow">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/Txt_email"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edTxt_enter_email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:hint="@string/edTxt_enter_email"
            android:layout_marginLeft="50dp" />
    </LinearLayout>

    <!-- 输入密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shadow">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Txt_password"
            android:textSize="20sp"
            android:gravity="center">
        </TextView>
        <EditText
            android:id="@+id/edTxt_enter_password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:hint="@string/edTxt_enter_password"
            android:layout_marginLeft="50dp" />
    </LinearLayout>

    <!-- 再次确认密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shadow">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Txt_confirm_password"
            android:textSize="20sp"
            android:gravity="center">
        </TextView>
        <EditText
            android:id="@+id/edTxt_enter_confirm_password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:hint="@string/edTxt_enter_confirm_password"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <!-- 注册按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_enroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/login_btn_bg"
            android:text="@string/btn_enroll"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>