<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ResetActivity">

    <!-- 图像-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="行疆"
            android:fontFamily="@font/xiaozhuan"
            android:textSize="50dp"
            android:textColor="?attr/colorPrimaryDark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text"
            android:text="xingjiang"
            android:textColor="?attr/colorPrimary"
            />
    </LinearLayout>
    <!-- 输入密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edTxt_reset_password"
            app:counterEnabled="true"
            app:helperTextEnabled="true"
            app:helperText="密码大于8位"
            app:boxStrokeColor="?attr/colorPrimary"
            app:boxStrokeWidth="2dp"
            app:startIconDrawable="@drawable/password"
            app:startIconContentDescription="密码"
            tools:ignore="ExtraText,MissingConstraints"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTxt_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- 再次确认密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edTxt_reset_confirm_password"
            app:boxStrokeColor="?attr/colorPrimary"
            app:boxStrokeWidth="2dp"
            app:startIconDrawable="@drawable/login"
            app:startIconContentDescription="密码"
            tools:ignore="ExtraText,MissingConstraints"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTxt_reset_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- 确认按钮-->
    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        android:text="@string/btn_reset"
        app:rippleColor="@color/m3_button_ripple_color_selector"
        android:onClick="enrollOnclick"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/context_view"
        android:orientation="horizontal"
        ></LinearLayout>

</LinearLayout>